vuejs/vuejs-tests/testData/highlighting/vueAttributeWithoutValueWithFollowingAttribute/vueAttributeWithoutValueWithFollowingAttribute.vue
<template>
  <error descr="Vue: v-else/v-else-if has no adjacent v-if or v-else-if."><div v-else class="one two three four">5</div></error>
</template>